Fixed mobile popup tooltip overflow

--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,6 @@
   }
 
   .flex-container-text-box{
-    overflow: scroll;
     padding: 3%;
   }
 
